@@ -23,7 +23,6 @@ import java.util.Optional;
 import java.util.Set;
 import java.util.concurrent.CompletionStage;
 import java.util.concurrent.TimeUnit;
-import java.util.stream.Collectors;
 
 import javax.annotation.Nullable;
 
@@ -320,7 +319,7 @@ public final class MongoThingsSearchPersistence implements ThingsSearchPersisten
     private static List<TimestampedThingId> toTimestampedThingIds(final List<Document> docs) {
         return docs.stream()
                 .map(MongoThingsSearchPersistence::toTimestampedThingId)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private static TimestampedThingId toTimestampedThingId(final Document doc) {
